--- a/Java_Odontoprev_v2/src/main/resources/templates/cliente/lista.html
+++ b/Java_Odontoprev_v2/src/main/resources/templates/cliente/lista.html
@@ -25,7 +25,7 @@
     </thead>
     <tbody>
     <tr th:each="cliente : ${clientes}">
-      <td th:text="${cliente.cpf_cnpj}"></td>
+      <td th:text="${cliente.usuario.cpf_cnpj}"></td>
       <td th:text="${cliente.usuario.nome}"></td>
       <td th:text="${#dates.format(cliente.usuario.dataNascimento, 'dd/MM/yyyy')}"></td>
       <td th:text="${cliente.usuario.Email}"></td>
@@ -33,8 +33,8 @@
       <td th:text="${cliente.cep}"></td>
       <td th:text="${cliente.tipoPlano}"></td>
       <td>
-        <a th:href="@{/cliente/editar/{cpfCnpj}(cpfCnpj=${cliente.cpf_cnpj})}" class="btn btn-sm btn-info">Editar</a>
-        <a th:href="@{/cliente/deletar/{cpfCnpj}(cpfCnpj=${cliente.cpf_cnpj})}" class="btn btn-sm btn-danger" onclick="return confirm('Tem certeza que deseja excluir este cliente?')">Excluir</a>
+        <a th:href="@{/cliente/editar/{id}(id=${cliente.idCliente})}" class="btn btn-sm btn-info">Editar</a>
+        <a th:href="@{/cliente/deletar/{id}(id=${cliente.idCliente})}" class="btn btn-sm btn-danger" onclick="return confirm('Tem certeza que deseja excluir este cliente?')">Excluir</a>
       </td>
     </tr>
     </tbody>
