--- a/Java_Odontoprev_v2/src/main/resources/templates/cliente/novo.html
+++ b/Java_Odontoprev_v2/src/main/resources/templates/cliente/novo.html
@@ -12,7 +12,7 @@
   <form th:action="@{/cliente/salvar}" th:object="${cliente}" method="post">
     <div class="form-group">
       <label for="cpfCnpj">CPF/CNPJ</label>
-      <input type="text" class="form-control" id="cpfCnpj" th:field="*{cpf_cnpj}">
+      <input type="text" class="form-control" id="cpfCnpj" th:field="*{usuario.cpf_cnpj}">
       <small class="form-text text-muted">Informe o CPF ou CNPJ do cliente.</small>
     </div>
     <div class="form-group">
