--- a/Java_Odontoprev_v2/src/main/resources/templates/cliente/lista.html
+++ b/Java_Odontoprev_v2/src/main/resources/templates/cliente/lista.html
@@ -27,7 +27,7 @@
     <tr th:each="cliente : ${clientes}">
       <td th:text="${cliente.usuario.cpf_cnpj}"></td>
       <td th:text="${cliente.usuario.nome}"></td>
-      <td th:text="${#dates.format(cliente.usuario.dataNascimento, 'dd/MM/yyyy')}"></td>
+      <td th:text="${cliente.usuario.dataNascimento}"></td>
       <td th:text="${cliente.usuario.Email}"></td>
       <td th:text="${cliente.usuario.Celular}"></td>
       <td th:text="${cliente.cep}"></td>
