--- a/Java_Odontoprev_v2/src/main/resources/templates/dentista/formulario.html
+++ b/Java_Odontoprev_v2/src/main/resources/templates/dentista/formulario.html
@@ -2,17 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title th:text="${dentista.cpf_cnpj == null ? 'Novo Dentista' : 'Editar Dentista'}"></title>
+    <title th:text="${dentista.idDentista == null ? 'Novo Dentista' : 'Editar Dentista'}"></title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
 <div class="container mt-4">
-    <h1 th:text="${dentista.cpf_cnpj == null ? 'Cadastrar Novo Dentista' : 'Editar Dentista'}"></h1>
+    <h1 th:text="${dentista.idDentista == null ? 'Cadastrar Novo Dentista' : 'Editar Dentista'}"></h1>
     <hr/>
     <form th:action="@{/dentista/salvar}" th:object="${dentista}" method="post">
+        <input type="hidden" th:field="*{idDentista}"/>
         <div class="form-group">
             <label for="cpfCnpj">CPF/CNPJ</label>
-            <input type="text" class="form-control" id="cpfCnpj" th:field="*{cpf_cnpj}" th:readonly="${dentista.cpf_cnpj != null}">
+            <input type="text" class="form-control" id="cpfCnpj" th:field="*{usuario.cpf_cnpj}" th:readonly="${dentista.idDentista != null}">
             <small class="form-text text-muted">Informe o CPF ou CNPJ do dentista.</small>
         </div>
         <div class="form-group">
